test/Fail/Issue1523.err
Issue1523.agda:30.26-32.23: error: [EmptyTypeOfSizes]
Possibly empty type of sizes: (Size< i)
when checking that the expression
λ (j : Size< i) (n : Nat j) →
  case j n default λ (h : Size< j) (_ : Nat h) → r (↑ h) (zero h)
has type (j : Size< i) → Nat j → A
